# agent-moe-lp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BACKTESTING_RESULTS.md  Dockerfile  README.md  WALLET_ENCRYPTION.md  docker-compose.yml  pyproject.toml  requirements.txt  setup_dev_env.sh
docs/: README.md  actual_trading_strategy.md  cli-reference.md  configuration.md  deployment.md  moe-lp-mechanics.md  strategy-guide.md  technical-reference.md
scripts/: backtest_compare.py  backtest_hyperopt.py  backtest_sweep.py  backtest_walkforward.py
skills/moe-lp-operations/: SKILL.md
src/moe_mantle_bot/: __init__.py  _lp_registry.py  abi.py  analytics.py  balance_manager.py  cli.py  command_cli.py  config.py  constants.py  farm_bot.py  logging_config.py  lp_service.py  lp_shapes.py  models.py  notification_formatter.py  notifications.py  portfolio_review.py  portfolio_review_cli.py  rpc_client.py  (+6 more)
tests/: test_analytics_phase0.py  test_backtest.py  test_balance_manager.py  test_capital_budget.py  test_distribution_shape.py  test_dust_position_filter.py  test_exit_reenter.py  test_legacy_artifact_warning.py  test_lp_entry_metrics.py  test_lp_service.py  test_market_indicator_logging.py  test_reentry_execution_coordinator.py  test_reentry_tuning_summary.py  test_registry_hooks.py  test_registry_merge.py  test_retry_guards.py  test_single_position_cycle_planner.py  test_single_position_cycle_preparer.py  test_single_position_executor.py  test_strategy_engine.py  test_strategy_refactoring_phase0.py  test_strategy_selector.py  test_tx_sender.py  test_wide_entry_safety.py
(+38 files in other folders)
